--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <canvas id="pie" height="1000px"></canvas>
 
         <script src="chart.js"></script>
-        <script src="jquery.js"></script>
+        <script src="jq.js"></script>
         <script src="data.js"></script>
         <script src="app.js"></script>
     </body>
