--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
         <meta charset="utf8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="padding: 1em !important;">
         <h1>2nd EU referendum breakdown</h1>
         <p>Just who exactly is making this petition grow large?</p>
-        <p>Well looking at the data only <span id="num"></span> of signees are from Great Britain.</p>
+        <p>Well looking at the data only <span id="num">{{LOADING}}</span> of signees are from Great Britain.</p>
         <small> Data source: <a href="https://petition.parliament.uk/petitions/131215.json">https://petition.parliament.uk/petitions/131215.json</a></small>
     
         <canvas id="pie" height="1000px"></canvas>
