--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>2nd EU referendum breakdown</h1>
         <p>Just who exactly is making this petition grow large?</p>
         <p>Well looking at the data only <span id="num">{{LOADING}}</span> of signees are from Great Britain.</p>
+        <small> Petition: <a href="https://petition.parliament.uk/petitions/131215">https://petition.parliament.uk/petitions/131215</a></small>
         <small> Data source: <a href="https://petition.parliament.uk/petitions/131215.json">https://petition.parliament.uk/petitions/131215.json</a></small>
     
         <canvas id="pie" height="1000px"></canvas>
