--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body style="padding: 1em !important;">
-        <h1>2nd EU referendum breakdown</h1>
-        <p>Just who exactly is making this petition grow large?</p>
-        <p>Well looking at the data only <span id="num">{{LOADING}}</span> of signees are from Great Britain.</p>
+        <h1>Data Analysis</h1>
+        <h2>EU Referendum Rules triggering a 2nd EU Referendum <h2>
+        <p>Which countries support this petition.</p>
+        <p>Looking at the data only <span id="num">{{LOADING}}</span> of signatures are from Great Britain.</p>
         <small> Petition: <a href="https://petition.parliament.uk/petitions/131215">https://petition.parliament.uk/petitions/131215</a></small>
+        <br>
         <small> Data source: <a href="https://petition.parliament.uk/petitions/131215.json">https://petition.parliament.uk/petitions/131215.json</a></small>
     
         <canvas id="pie" height="1000px"></canvas>
