--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body style="padding: 1em !important;">
         <h1>Data Analysis</h1>
-        <h2>EU Referendum Rules triggering a 2nd EU Referendum <h2>
+        <h3>EU Referendum Rules triggering a 2nd EU Referendum </h3>
         <p>Which countries support this petition.</p>
         <p>Looking at the data only <span id="num">{{LOADING}}</span> of signatures are from Great Britain.</p>
         <small> Petition: <a href="https://petition.parliament.uk/petitions/131215">https://petition.parliament.uk/petitions/131215</a></small>
