--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <body style="padding: 1em !important;">
         <h1>Data Analysis</h1>
         <h3>"EU Referendum Rules triggering a 2nd EU Referendum"</h3>
-        <p>Which countries support this petition.</p>
-        <p>Looking at the data only <span id="num">{{LOADING}}</span> of signatures are from Great Britain.</p>
+        <p>Breakdown by countries supporting this petition. Looking at the data <span id="num">{{LOADING}}</span> of signatures are from Great Britain.</p>
         <small> Petition: <a href="https://petition.parliament.uk/petitions/131215">https://petition.parliament.uk/petitions/131215</a></small>
         <br>
         <small> Data source: <a href="https://petition.parliament.uk/petitions/131215.json">https://petition.parliament.uk/petitions/131215.json</a></small>
